Simplify test-lts generation